syntax = "proto3";
package MasterWorker;
option go_package = "/masterworker";

message Task {
  string uuid = 1;
  string finisheduuid = 2;
  int32 state = 3; // 0 - not started, 1 - in progress, 2 - finished
  int32 id = 4;
}